--- a/style.css
+++ b/style.css
@@ -16,10 +16,11 @@ h1, h2, a{
     text-decoration: none;
 }
 
-p {
-    color: var(--accent-clr);
-    font-family: var(--sec-font);
-    font-size: 1.5rem;
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
 
 .title {
